--- a/RabbitMQ/composer.json
+++ b/RabbitMQ/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "php-amqplib/php-amqplib": "^2.8"
+        "php-amqplib/php-amqplib": "^2.8",
+        "fzaninotto/faker": "^1.8"
     }
 }
